[package]
name = "wasm-asteroids"
version = "0.1.0"
edition = "2021"
description = "A WebAssembly implementation of the classic Asteroids game using Rust with enhanced features including progressive levels, special asteroids, and immersive gameplay mechanics"
repository = "https://github.com/your-username/wasm-asteroids"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3.61", features = [
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Window",
    "console",
    "AudioContext",
    "OscillatorNode",
    "AudioNode",
    "AudioParam",
    "GainNode",
    "OscillatorType",
    "AudioDestinationNode",
    "HtmlAudioElement"
]} 